--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "report" : "allure generate ./allure-results -o ./allure-report --clean"
+    "report": "node ./report-utils/preAllureReport.js && allure generate ./allure-results -o ./allure-report --clean"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
+    "allure-js-commons": "^3.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7"
   }
